--- a/application/server/package.json
+++ b/application/server/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/sfsu-joseo/csc648-848-05-sw-engineering-spring-2023-T03/issues"
   },
-  "homepage": "https://github.com/sfsu-joseo/csc648-848-05-sw-engineering-spring-2023-T03#readme"
+  "homepage": "https://github.com/sfsu-joseo/csc648-848-05-sw-engineering-spring-2023-T03#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "pg": "^8.10.0"
+  }
 }
