--- a/application/server/package.json
+++ b/application/server/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/sfsu-joseo/csc648-848-05-sw-engineering-spring-2023-T03#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "pg": "^8.10.0"
   }
 }
