--- a/application/server/package.json
+++ b/application/server/package.json
@@ -21,9 +21,10 @@
   },
   "homepage": "https://github.com/sfsu-joseo/csc648-848-05-sw-engineering-spring-2023-T03#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
     "pg": "^8.10.0"
-
   }
 }
