--- a/application/client/package.json
+++ b/application/client/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&SSL_CRT_FILE=../../credentials/certification/cert.pem&&SSL_KEY_FILE=../../credentials/certification/key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
