--- a/application/server/package.json
+++ b/application/server/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "pg": "^8.10.0"
-
+    "pg": "^8.10.0",
+"react": "^16.2.0",
+"react-toastify": "^3.2.2"
   }
 }
