--- a/application/server/package.json
+++ b/application/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "a webserver for Recipes-03 tream project",
+  "description": "a webserver for Recipes-03 team project",
   "main": "server.js",
   "scripts": {
     "test": "test",
@@ -25,10 +25,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "pg": "^8.10.0",
-    "react": "^16.2.0",
-    "react-toastify": "^3.2.2"
     "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
+    "react": "^16.2.0"
   }
 }
