--- a/application/server/package.json
+++ b/application/server/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/sfsu-joseo/csc648-848-05-sw-engineering-spring-2023-T03#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^2.4.2",
     "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.22",
