--- a/application/server/package.json
+++ b/application/server/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
     "knex-cleaner": "^1.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
   }
