--- a/application/server/package.json
+++ b/application/server/package.json
@@ -31,6 +31,7 @@
     "knex-cleaner": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "uuid": "^9.0.0"
   }
 }
