--- a/application/server/package.json
+++ b/application/server/package.json
@@ -26,7 +26,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^6.0.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "knex-cleaner": "^1.3.1",
     "multer": "^1.4.5-lts.1",
