--- a/application/client/package.json
+++ b/application/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
